Add start of notebook docs

--- a/web/pages/docs/reference/python.mdx
+++ b/web/pages/docs/reference/python.mdx
@@ -1,5 +1,6 @@
 import CodeBlock from "../../../components/code-block";
 import DocsLayout from "../../../layouts/docs";
+import Note from "../../../components/note";
 
 <DocsLayout title="Python library reference">
 
@@ -9,6 +10,14 @@ The Replicate Python library is used to create experiments and checkpoints in yo
 This page is a comprehensive reference for it. To get an introduction on how to use it, see [the tutorial](/docs/tutorial).
 
 To install the library, [see the installation instructions](/docs).
+
+<Note>
+
+
+We are working on a new API for reading and analyzing experiment data from Python. It isn't fully documented yet, but <a href="https://colab.research.google.com/drive/14zX3uYaZzHu0Sn7ylQTW1NalM363fcCf" target="_blank">see this notebook for examples of how to use it</a>.
+
+</Note>
+
 
 ### `replicate.init()`
 
