--- a/web/pages/docs/reference/cli.mdx
+++ b/web/pages/docs/reference/cli.mdx
@@ -56,7 +56,7 @@ replicate checkout <experiment or checkpoint ID> [flags]
   -f, --force                     Force checkout without prompt, even if the directory is not empty
   -h, --help                      help for checkout
   -o, --output-directory string   Output directory (defaults to working directory or directory with replicate.yaml in it)
-  -S, --storage-url string        Storage URL (e.g. 's3://my-replicate-bucket' (if omitted, uses storage URL from replicate.yaml)
+  -R, --repository string         Repository URL (e.g. 's3://my-replicate-bucket' (if omitted, uses repository URL from replicate.yaml)
 
       --color                      Display color in output (default true)
   -D, --project-directory string   Project directory. Default: working directory, or nearest parent with replicate.yaml
@@ -77,8 +77,8 @@ replicate diff <ID> <ID> [flags]
 ### Flags
 
 ```
-  -h, --help                 help for diff
-  -S, --storage-url string   Storage URL (e.g. 's3://my-replicate-bucket' (if omitted, uses storage URL from replicate.yaml)
+  -h, --help                help for diff
+  -R, --repository string   Repository URL (e.g. 's3://my-replicate-bucket' (if omitted, uses repository URL from replicate.yaml)
 
       --color                      Display color in output (default true)
   -D, --project-directory string   Project directory. Default: working directory, or nearest parent with replicate.yaml
@@ -139,8 +139,8 @@ $ replicate ls --sort "val_loss" --filter "status = stopped"
   -h, --help                 help for ls
       --json                 Print output in JSON format
   -q, --quiet                Only print experiment IDs
+  -R, --repository string    Repository URL (e.g. 's3://my-replicate-bucket' (if omitted, uses repository URL from replicate.yaml)
   -s, --sort string          Sort key. Suffix with '-desc' for descending sort, e.g. --sort=started-desc (default "started")
-  -S, --storage-url string   Storage URL (e.g. 's3://my-replicate-bucket' (if omitted, uses storage URL from replicate.yaml)
 
       --color                      Display color in output (default true)
   -D, --project-directory string   Project directory. Default: working directory, or nearest parent with replicate.yaml
@@ -164,8 +164,8 @@ replicate ps [flags]
   -h, --help                 help for ps
       --json                 Print output in JSON format
   -q, --quiet                Only print experiment IDs
+  -R, --repository string    Repository URL (e.g. 's3://my-replicate-bucket' (if omitted, uses repository URL from replicate.yaml)
   -s, --sort string          Sort key. Suffix with '-desc' for descending sort, e.g. --sort=started-desc (default "started")
-  -S, --storage-url string   Storage URL (e.g. 's3://my-replicate-bucket' (if omitted, uses storage URL from replicate.yaml)
 
       --color                      Display color in output (default true)
   -D, --project-directory string   Project directory. Default: working directory, or nearest parent with replicate.yaml
@@ -200,8 +200,9 @@ replicate rm $(replicate ls -q --filter "val_accuracy < 0.2")
 ### Flags
 
 ```
-  -h, --help                 help for rm
-  -S, --storage-url string   Storage URL (e.g. 's3://my-replicate-bucket' (if omitted, uses storage URL from replicate.yaml)
+  -f, --force               Force delete without interactive prompt
+  -h, --help                help for rm
+  -R, --repository string   Repository URL (e.g. 's3://my-replicate-bucket' (if omitted, uses repository URL from replicate.yaml)
 
       --color                      Display color in output (default true)
   -D, --project-directory string   Project directory. Default: working directory, or nearest parent with replicate.yaml
@@ -220,9 +221,9 @@ replicate show <experiment or checkpoint ID> [flags]
 ### Flags
 
 ```
-  -h, --help                 help for show
-      --json                 Print output in JSON format
-  -S, --storage-url string   Storage URL (e.g. 's3://my-replicate-bucket' (if omitted, uses storage URL from replicate.yaml)
+  -h, --help                help for show
+      --json                Print output in JSON format
+  -R, --repository string   Repository URL (e.g. 's3://my-replicate-bucket' (if omitted, uses repository URL from replicate.yaml)
 
       --color                      Display color in output (default true)
   -D, --project-directory string   Project directory. Default: working directory, or nearest parent with replicate.yaml
