--- a/web/pages/docs/index.mdx
+++ b/web/pages/docs/index.mdx
@@ -6,7 +6,11 @@ import DocsLayout from "../../layouts/docs";
 
 ## First steps
 
-If you like to **learn by doing**, [our tutorial will help you learn how Replicate works by building a simple model](/docs/tutorial). If you prefer to **learn concepts first**, take a look at [our guide about how Replicate works](/docs/learn/how-it-works).
+If you prefer **training scripts and the CLI**, [follow the our tutorial to learn how Replicate works](/docs/tutorial).
+
+If you prefer **working in notebooks**, <a href={process.env.TUTORIAL_COLAB_URL}>follow our notebook tutorial on Colab</a>.
+
+If you like to **learn concepts first**, [read our guide about how Replicate works](/docs/learn/how-it-works).
 
 ## Install
 
@@ -23,6 +27,8 @@ Next, you might want to:
 - [Build a model to learn how to use Replicate](/docs/tutorial)
 - [Read our guide about how Replicate works](/docs/learn/how-it-works)
 - [Read the reference for the Python library](/docs/reference/python)
+
+<!-- FIXME: add this back at some point
 
 ## Install with `requirements.txt`
 
@@ -41,5 +47,6 @@ Then, run this to install it in your Python environment:
 pip install -r requirements.txt
 ```
 
-</DocsLayout>
+-->
 
+</DocsLayout>
