--- a/web/pages/docs/tutorial.mdx
+++ b/web/pages/docs/tutorial.mdx
@@ -1,11 +1,13 @@
-import CodeBlock from "../../../components/code-block";
-import DocsLayout from "../../../layouts/docs";
-import Note from "../../../components/note";
+import CodeBlock from "../../components/code-block";
+import DocsLayout from "../../layouts/docs";
+import Note from "../../components/note";
 
 <DocsLayout title="Tutorial">
 
 
 This guide will help you learn how Replicate works by building a simple model.
+
+**If you prefer working in notebooks, <a href={process.env.TUTORIAL_COLAB_URL}>follow our notebook tutorial on Colab</a>.**
 
 We're going to make a model that classifies Iris plants, trained on the [Iris dataset](https://en.wikipedia.org/wiki/Iris_flower_data_set). It's an intentionally simple model that trains really fast, just so we can show you how Replicate works.
 
@@ -44,7 +46,7 @@ You might want to use a [Virtualenv](https://virtualenv.pypa.io/en/latest/) or [
 Copy and paste this code into `train.py`:
 
 <CodeBlock className="python" metastring='title="train.py"'>
-  {require("!!raw-loader!../../../../example/train.py").default}
+  {require("!!raw-loader!../../../example/train.py").default}
 </CodeBlock>
 
 Notice there are two highlighted lines that call Replicate. They don't affect the behavior of the training – they just save data in Replicate to keep track of what is going on.
@@ -54,6 +56,16 @@ The first is `replicate.init()`. This creates an **experiment**, which represent
 The second is `experiment.checkpoint()`. This creates a **checkpoint** within the experiment. The checkpoint saves the metrics at that point, and makes a copy of the file or directory you pass to it, which could include weights and any other artifacts.
 
 **Each experiment contains multiple checkpoints.** You typically save your model periodically during training, because the best result isn't necessarily the most recent one. A checkpoint is created just after you save your model, so Replicate can keep track of versions of your saved model.
+
+## Define a repository
+
+We need to tell Replicate where to store your experiments. Create `replicate.yaml` with this content:
+
+```yaml
+repository: file://.replicate
+```
+
+This will store your experiments in the `.replicate` directory relative to this file. You can also store them on Amazon S3 or Google Cloud Storage if you want to store data in the cloud. [Learn more about this in our guide to usage cloud storage.](/docs/guides/cloud-storage)
 
 ## Train the model
 
@@ -103,18 +115,6 @@ $ replicate ls --filter "learning_rate = 0.2"
 EXPERIMENT  STARTED        STATUS   LEARNING_RATE  LATEST CHECKPOINT  LOSS      BEST CHECKPOINT    LOSS
 9cce006     3 seconds ago  stopped  0.2            a122e85 (step 99)  0.056486  a122e85 (step 99)  0.056486
 ```
-
-<Note>
-
-
-Similar to how Git works, all this data is in your working directory. Replicate only lists experiments in the current working directory, so you'll only see experiments from the model you're working on.
-
-If you want to poke around at the internal data, it is inside `.replicate/`. It's not something you'd do day to day, but there's no magic going on – everything's right there as files and plain JSON.
-
-You probably want to add `.replicate` to `.gitignore`, if you're using Git.
-
-</Note>
-
 
 As a reminder, this is a list of **experiments** which represents runs of the `train.py` script. They store a copy of the code as it was when the script was started.
 
@@ -271,6 +271,6 @@ So far, everything we've been doing has been local on a single machine. But in p
 
 Replicate can store experiment data on cloud storage so you can track all this in one place.
 
-Take a look at [the guide to storing data in the cloud](/docs/tutorial/cloud-storage) to learn more about this.
+Take a look at [the guide to storing data in the cloud](/docs/guides/cloud-storage) to learn more about this.
 
 </DocsLayout>
