make config file required and optional

--- a/web/pages/docs/learn/how-it-works.mdx
+++ b/web/pages/docs/learn/how-it-works.mdx
@@ -42,7 +42,7 @@ These two lines will record:
 - Any files produced on each iteration – weights, Tensorboard logs, etc.
 - Metrics on each iteration
 
-All of this versioned data is put in the **repository**, which by default is the `.replicate/storage/` directory in the same directory as your code. You can also store this data on cloud storage, such as Amazon S3 or Google Cloud Storage. [The format of this data is explained further below.](#data-storage)
+All of this versioned data is put in the **repository**, which by default is the `.replicate/` directory in the same directory as your code. You can also store this data on cloud storage, such as Amazon S3 or Google Cloud Storage. [The format of this data is explained further below.](#data-storage)
 
 The versioned data is accessed with the **command-line interface**. It consists of various commands for inspecting the data and getting it out:
 
@@ -90,7 +90,7 @@ Projects are just stored as plain files. There's nothing magical going on.
 
 They can be stored on:
 
-- The local filesystem, in `.replicate/storage/` in your project's directory
+- The local filesystem, in `.replicate/` in your project's directory
 - Amazon S3
 - Google Cloud Storage
 
