--- a/web/pages/docs/reference/yaml.mdx
+++ b/web/pages/docs/reference/yaml.mdx
@@ -18,7 +18,7 @@ repository: "s3://hooli-hotdog-model"
 
 The location where Replicate will store your project data (experiments, checkpoints, etc).
 
-By default, data is stored in `.replicate/storage/` on disk relative to the location of `replicate.yaml`.
+By default, data is stored in `.replicate/` on disk relative to the location of `replicate.yaml`.
 
 It supports several different storage mechanisms:
 
