Add back analysis & viz notebook

--- a/web/pages/docs/tutorial.mdx
+++ b/web/pages/docs/tutorial.mdx
@@ -267,10 +267,13 @@ You don't have to keep track of what you changed in your experiments, because Re
 
 ## What's next
 
-So far, everything we've been doing has been local on a single machine. But in practice, you probably want to train on a GPU machine, or multiple machines at the same time. Or, perhaps you want to work on the model with other people.
+Next, you might want to:
 
-Replicate can store experiment data on cloud storage so you can track all this in one place.
+- [Read our guide about storing experiment data in the cloud](/docs/guides/cloud-storage) so you can train on multiple machines and collaborate with others.
+- <a href={process.env.ANALYSIS_COLAB_URL} target="_blank">
+    Learn how to do analysis &amp; vizualization in notebooks.
+  </a>
 
-Take a look at [the guide to storing data in the cloud](/docs/guides/cloud-storage) to learn more about this.
+If something doesn't make sense, doesn't work, or you just have some questions, please email us: [team@replicate.ai](mailto:team@replicate.ai). We love hearing from you!
 
 </DocsLayout>
